--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </div>
           <div>
             <div class="work__img"><a href="#" target="_blank" class="project__links">
-              <img src="assets/img/work3.jpg" />
+              <img src="assets/img/omnifood.jpg" />
             </div>
             <p class="about__text project__heading">Food Order Website</p></a>
           </div>
