--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <p class="about__text project__heading">Food Order Website</p></a>
           </div>
           <div>
-            <div class="work__img"><a href="https://github.com/gsharma101/Pig-game" target="_blank" class="project__links">
+            <div class="work__img"><a href="https://gsharma101.github.io/Pig-game/" target="_blank" class="project__links">
               <img src="assets/img/work4.jpg" />
             </div>
             <p class="about__text project__heading">Pig Game</p></a>
