--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
             <p class="about__text project__heading">Food Order Website</p></a>
           </div>
           <div>
-            <div class="work__img"><a href="https://gsharma101.github.io/Pig-game/" target="_blank" class="project__links">
-              <img src="assets/img/work4.jpg" />
+            <div class="work__img"><a href="https://gsharma101.github.io/Natours/" target="_blank" class="project__links">
+              <img src="assets/img/natours.jpg" />
             </div>
-            <p class="about__text project__heading">Pig Game</p></a>
+            <p class="about__text project__heading">Natours</p></a>
           </div>
         </div>
       </section>
