my skills update

--- a/index.html
+++ b/index.html
@@ -136,7 +136,16 @@
             <h2 class="skills__subtitle">My Skills</h2>
             <div class="skills__data">
               <div class="skills__names">
-                <span class="skills__name">DevOps</span>
+                <span class="skills__name">UX/UI</span>
+              </div>
+              <div class="skills__bar skills__ux"></div>
+              <div>
+                <span class="skills__percentage">85%</span>
+              </div>
+            </div>
+            <div class="skills__data">
+              <div class="skills__names">
+                <span class="skills__name">Front-End Web Development</span>
               </div>
               <div class="skills__bar skills__devops"></div>
               <div>
@@ -145,20 +154,11 @@
             </div>
             <div class="skills__data">
               <div class="skills__names">
-                <span class="skills__name">Full Stack Web</span>
+                <span class="skills__name">Full Stack Web Development</span>
               </div>
               <div class="skills__bar skills__fullstack"></div>
               <div>
                 <span class="skills__percentage">65%</span>
-              </div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <span class="skills__name">UX/UI</span>
-              </div>
-              <div class="skills__bar skills__ux"></div>
-              <div>
-                <span class="skills__percentage">85%</span>
               </div>
             </div>
           </div>
